/*
 * Copyright 2017 - 2024 Riigi Infosüsteemi Amet
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 2.1 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this library; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
 *
 */

package ee.ria.DigiDoc.idcard;

/**
 * PIN1/PIN2/PUK code verification failed.
 */
public class CodeVerificationException extends IdCardException {

    private CodeType type;
    private int retries;

    CodeVerificationException(CodeType type, int retries) {
        super(type + " verification failed. Retries left: " + retries);
        this.type = type;
        this.retries = retries;
    }

    public CodeType getType() {
        return type;
    }

    public int getRetries() { return retries; }

}
