/*
 * Copyright 2017 - 2024 Riigi Infosüsteemi Amet
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 2.1 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this library; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
 *
 */

package ee.ria.DigiDoc.idcard;

import ee.ria.DigiDoc.smartcardreader.SmartCardReader;
import ee.ria.DigiDoc.smartcardreader.SmartCardReaderException;

class EstEIDv3d5 extends EstEIDToken {

    private final SmartCardReader reader;

    EstEIDv3d5(SmartCardReader reader) {
        super(reader);
        this.reader = reader;
    }

    @Override
    void selectMasterFile() throws SmartCardReaderException {
        reader.transmit(0x00, 0xA4, 0x00, 0x0C, null, 0x00);
    }

    @Override
    void selectCatalogue() throws SmartCardReaderException {
        reader.transmit(0x00, 0xA4, 0x01, 0x04, new byte[] {(byte) 0xEE, (byte) 0xEE}, null);
    }

    @Override
    void selectSecurityEnvironment(byte operation) throws SmartCardReaderException {
        reader.transmit(0x00, 0x22, 0xF3, operation, null, 0x00);
    }

    @Override
    public byte[] authenticate(byte[] pin1, byte[] token) throws SmartCardReaderException {
        return new byte[0];
    }
}
